fixed an error on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ cursor: pointer;
 
 
 /* Media query for Laptops and larger (992px and up) */
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 900px) {
   
   
 
@@ -263,7 +263,7 @@ h3 {
 
 
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 300px) {
  
 
   .btn-game, .mobile{
@@ -291,8 +291,8 @@ h3 {
 
   #image {
     position: relative;
-    width: 60px;
-    height: 80px;
+    width: 50px;
+    height: 70px;
     margin-left: 24px;
     cursor: pointer;
      }
